--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <a href="./snack1/index.html"></a>
+    <a href="./snack2/index.html"></a>
+    <a href="./snack3/index.html"></a>
+    <a href="./snack4/index.html"></a>
     <script src="./js/script.js"></script>
 </body>
 </html>
