--- a/snack1/index.html
+++ b/snack1/index.html
@@ -20,6 +20,7 @@
         <button id="bottone" class="btn btn-secondary">Stampa il numero pari</button>
 
     </div>
+    <h2 class="messaggio2 text-success text-center mt-5"></h2>
     <h2 class="messaggio text-success text-center mt-5"></h2>
     <script src="./js/script.js"></script>
 </body>
