--- a/snack2/index.html
+++ b/snack2/index.html
@@ -7,11 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>snack1</title>
+    <title>snack2</title>
 </head>
 
-<body>
-    
+<body class="bg-dark">
+    <h1 class="text-center fst-italic mt-5 text-warning">Generatore Nome-Cognome</h1>
+    <div class="d-flex justify-content-center mt-5">
+        <button id="generatore" class="btn btn-secondary ms-2">Genera</button>
+    </div>
+    <p id="inventato" class="text-white text-center mt-5 fs-2"></p>
+    <h2 class="messaggio text-success text-center mt-5"></h2>
+    <h2 class="messaggio2 text-success text-center mt-5"></h2>
     <script src="./js/script.js"></script>
 </body>
 
