--- a/snack3/index.html
+++ b/snack3/index.html
@@ -10,7 +10,11 @@
     <title>Snack3</title>
 </head>
 
-<body>
+<body class="bg-dark">
+    <h1 class="text-center mt-5 text-warning">Somma tutti gli elementi che sono in posizione dispari</h1>
+
+    <p class="showArray text-center mt-5 text-white fs-3"></p>
+    <h2 class="messaggio text-success text-center mt-5"></h2>
 
     <script src="./js/script.js"></script>
 </body>
