bottoni pagina iniziale

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
-    <a href="./snack1/index.html"></a>
-    <a href="./snack2/index.html"></a>
-    <a href="./snack3/index.html"></a>
-    <a href="./snack4/index.html"></a>
+
+<body >
+    <div class="d-flex justify-content-center mt-5">
+        <a href="./snack1/index.html" class="btn btn-secondary ms-3">snack1</a>
+        <a href="./snack2/index.html" class="btn btn-secondary ms-3">snack2</a>
+        <a href="./snack3/index.html" class="btn btn-secondary ms-3">snack3</a>
+        <a href="./snack4/index.html" class="btn btn-secondary ms-3">snack4</a>
+    </div>
     <script src="./js/script.js"></script>
 </body>
+
 </html>
